--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ googlefont: "Saira+Condensed:wght@100",
 fontratio: "0.4", 
 radioname: "Radio Respuesta Perú CID", 
 scroll: "true", 
-coverimage: "https://i.imgur.com/GTlU5gJ.png",
+coverimage: "https://i.imgur.com/0CMtcOB.jpg",
 onlycoverimage: "false",
 coverstyle: "animated",
 usevisualizer: "real", 
