--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ hightlightcolor: "#b60c0f",
 fontname: "Saira Condensed", 
 googlefont: "Saira+Condensed:wght@100", 
 fontratio: "0.4", 
-radioname: "Radio Respuesta Perú CID", 
+radioname: "Radio Respuesta Perú Federpol", 
 scroll: "true", 
 coverimage: "https://i.imgur.com/0CMtcOB.jpg",
 onlycoverimage: "false",
