--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <meta name="theme-color" content="#08298a">
-<title>RadioRespuestaPerúCID</title>
+<title>RadioRespuestaPerúFederpol</title>
 <link href="css/style.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -24,7 +24,7 @@ html,body{font-family:"Open Sans",sans-serif;height:100%;margin:0;display:flex;f
     <script>
 $("#player").lunaradio({
 userinterface: "big", 
-backgroundcolor: "rgba(9,15,25,0.8)",
+backgroundcolor: "rgba(9,15,25,0.9)",
 fontcolor: "#ffffff",
 hightlightcolor: "#b60c0f", 
 fontname: "Saira Condensed", 
