--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ setInterval(reloj, 1000);
 
 <footer style="display:grid;align-content:end">
 <div style="background-color:#222;color:#fff;text-align:center;padding:10px"> 
-&copy; Copyright 2024 - <a href=" ">RadioRespuestaPerúCID</a> 
+&copy; Copyright 2024 - <a href=" ">RadioFederpol</a> 
 </div>
 </footer>
 
