--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <meta name="keywords" content="Radio Federpol PNP">
         <meta name="description" content="Radio Federpol PNP">
-        <meta name="theme-color" content="#f74d9d">
+        <meta name="theme-color" content="#cc3131">
         <meta name="author" content="By: Radio Federpol PNP">
         <meta name="copyright" content="Radio Federpol PNP Contenidos">
         <meta name="geo.placename" content="Radio Federpol PNP">
