--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         }
         #installPopup button {
             
-            background: #de99e0;
+            background: #f9d94a;
             color: white;
             border: none;
             padding: 10px 20px;
