--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 	hightlightcolor: "#f9d94a",
 	fontname: "Unica One",
 	googlefont: "Unica+One&display=swap",
-	fontratio: "0.6",
-	radioname: "Radio Federpol PNP",
+	fontratio: "0.4",
+	radioname: "Radio Respuesta Federpol PNP",
 	scroll: "true",
 	coverimage: "img/logo.png",
 	onlycoverimage: "false",
