--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <meta name="keywords" content="Radio Federpol PNP">
-        <meta name="description" content="Radio Federpol PNP">
+        <meta name="description" content="FEDERACIÓN DE RETIRADOS Y ACTIVIDAD DE LA POLICÍA NACIONAL DEL PERÚ. Somos ​una institución que tiene por finalidad contribuir al bienestar de sus asociados">
         <meta name="theme-color" content="#cc3131">
         <meta name="author" content="By: Radio Federpol PNP">
         <meta name="copyright" content="Radio Federpol PNP Contenidos">
